<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- RecyclerView pour afficher la liste des commandes -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:layout_marginBottom="10dp" /> <!-- 10px au-dessus du bouton -->

    <!-- Bouton pour régénérer la liste des commandes -->
    <Button
        android:id="@+id/regenerateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/regenerateOrders" />
    <Button
        android:id="@+id/buttonUseContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/useExistedContainer"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:visibility="gone"/>
    <Button
        android:id="@+id/buttonConfigureContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configureContainer"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

</LinearLayout>